DevTools: fix SCT timestamp in SecurityDetails of frame resources

Bug: 836732
Change-Id: Ia8b1fbfca1cb1a30289337571e8db6a3163751ac
Reviewed-on: https://chromium-review.googlesource.com/1033721
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554553}
Former-commit-id: 28e7ee60a6911a3acac8cc0ef9425a2b00dbfc03